--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ dist
 AUTHORS
 ChangeLog
 tags
+horizon/.project
+horizon/.pydevproject
+.project
+openstack_dashboard/.project
+openstack_dashboard/.pydevproject
+.pydevproject
