--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ python-glanceclient>=0.9.0
 python-heatclient>=0.2.3
 python-keystoneclient>=0.8.0
 python-neutronclient>=2.3.4,<3
-python-novaclient>=2.17.0
+git+https://github.com/anaumchev/python-novaclient.git@development
+#python-novaclient>=2.17.0
 python-saharaclient>=0.6.0
 python-swiftclient>=2.0.2
 python-troveclient>=1.0.4
